--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               <div class="products_new_item--content-container">
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
-                  <a
+                  <button
                     href="#"
                     class="btn btn--view-page add-to-cart"
                     data-product-id="1"
@@ -191,7 +191,7 @@
                     data-product-img="./src/assets/images/products/new/product1.jpg"
                   >
                     <i id="shopping-cart" class="fa-solid fa-cart-shopping"></i>
-                  </a>
+                  </button>
                   <a class="btn btn--view-page" href="#">View</a>
                 </div>
               </div>
@@ -215,7 +215,7 @@
               <div class="products_new_item--content-container">
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
-                  <a
+                  <button
                     href="#"
                     class="btn btn--view-page add-to-cart"
                     data-product-id="2"
@@ -224,7 +224,7 @@
                     data-product-img="./src/assets/images/products/new/product2.jpg"
                   >
                     <i class="fa-solid fa-cart-shopping"></i>
-                  </a>
+                  </button>
                   <a class="btn btn--view-page" href="#">View</a>
                 </div>
               </div>
@@ -248,7 +248,7 @@
               <div class="products_new_item--content-container">
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
-                  <a
+                  <button
                     href="#"
                     class="btn btn--view-page add-to-cart"
                     data-product-id="3"
@@ -257,7 +257,7 @@
                     data-product-img="./src/assets/images/products/new/product3.jpg"
                   >
                     <i class="fa-solid fa-cart-shopping"></i>
-                  </a>
+                  </button>
                   <a class="btn btn--view-page" href="#">View</a>
                 </div>
               </div>
@@ -281,7 +281,7 @@
               <div class="products_new_item--content-container">
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
-                  <a
+                  <button
                     href="#"
                     class="btn btn--view-page add-to-cart"
                     data-product-id="4"
@@ -290,7 +290,7 @@
                     data-product-img="./src/assets/images/products/new/product4.jpg"
                   >
                     <i class="fa-solid fa-cart-shopping"></i>
-                  </a>
+                  </button>
                   <a class="btn btn--view-page" href="#">View</a>
                 </div>
               </div>
@@ -319,9 +319,9 @@
               <div class="products_new_item--content-container">
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
-                  <a href="#" class="btn btn--view-page add-to-cart">
+                  <button href="#" class="btn btn--view-page add-to-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
-                  </a>
+                  </button>
                   <a class="btn btn--view-page" href="#">View</a>
                 </div>
               </div>
