Fixed logic shoppingcart

--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
                   <button
-                    href="#"
-                    class="btn btn--view-page add-to-cart"
+                    type="button"
+                    class="btn btn--shoppingcart add-to-cart"
                     data-product-id="1"
                     data-product-name="New Product 1"
                     data-product-price="50"
                     data-product-img="./src/assets/images/products/new/product1.jpg"
                   >
-                    <i id="shopping-cart" class="fa-solid fa-cart-shopping"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
                   </button>
                   <a class="btn btn--view-page" href="#">View</a>
                 </div>
@@ -201,7 +201,7 @@
             <div class="products__new_item--img-wrapper">
               <img
                 class="products__new_item--img main-img"
-                src="./src/assets/images/products/new/product2.jpg"
+                src="https://placehold.co/600x400"
                 alt="New product 2"
               />
               <img
@@ -216,12 +216,12 @@
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
                   <button
-                    href="#"
-                    class="btn btn--view-page add-to-cart"
+                    type="button"
+                    class="btn btn--shoppingcart add-to-cart"
                     data-product-id="2"
                     data-product-name="New Product 2"
                     data-product-price="50"
-                    data-product-img="./src/assets/images/products/new/product2.jpg"
+                    data-product-img="https://placehold.co/600x400"
                   >
                     <i class="fa-solid fa-cart-shopping"></i>
                   </button>
@@ -234,7 +234,7 @@
             <div class="products__new_item--img-wrapper">
               <img
                 class="products__new_item--img main-img"
-                src="./src/assets/images/products/new/product3.jpg"
+                src="https://placehold.co/600x400"
                 alt="New product 3"
               />
               <img
@@ -249,12 +249,12 @@
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
                   <button
-                    href="#"
-                    class="btn btn--view-page add-to-cart"
+                    type="button"
+                    class="btn btn--shoppingcart add-to-cart"
                     data-product-id="3"
                     data-product-name="New Product 3"
                     data-product-price="50"
-                    data-product-img="./src/assets/images/products/new/product3.jpg"
+                    data-product-img="https://placehold.co/600x400"
                   >
                     <i class="fa-solid fa-cart-shopping"></i>
                   </button>
@@ -267,7 +267,7 @@
             <div class="products__new_item--img-wrapper">
               <img
                 class="products__new_item--img main-img"
-                src="./src/assets/images/products/new/product4.jpg"
+                src="https://placehold.co/600x400"
                 alt="New product 4"
               />
               <img
@@ -282,12 +282,12 @@
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
                   <button
-                    href="#"
-                    class="btn btn--view-page add-to-cart"
+                    type="button"
+                    class="btn btn--shoppingcart add-to-cart"
                     data-product-id="4"
                     data-product-name="New Product 4"
                     data-product-price="50"
-                    data-product-img="./src/assets/images/products/new/product4.jpg"
+                    data-product-img="https://placehold.co/600x400"
                   >
                     <i class="fa-solid fa-cart-shopping"></i>
                   </button>
@@ -319,7 +319,14 @@
               <div class="products_new_item--content-container">
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
-                  <button href="#" class="btn btn--view-page add-to-cart">
+                  <button
+                    type="button"
+                    class="btn btn--shoppingcart add-to-cart"
+                    data-product-id="5"
+                    data-product-name="Best Product 1"
+                    data-product-price="50"
+                    data-product-img="https://placehold.co/600x400"
+                  >
                     <i class="fa-solid fa-cart-shopping"></i>
                   </button>
                   <a class="btn btn--view-page" href="#">View</a>
@@ -345,9 +352,16 @@
               <div class="products_new_item--content-container">
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
-                  <a href="#" class="btn btn--view-page add-to-cart">
+                  <button
+                    type="button"
+                    class="btn btn--shoppingcart add-to-cart"
+                    data-product-id="5"
+                    data-product-name="Best Product 1"
+                    data-product-price="50"
+                    data-product-img="https://placehold.co/600x400"
+                  >
                     <i class="fa-solid fa-cart-shopping"></i>
-                  </a>
+                  </button>
                   <a class="btn btn--view-page" href="#">View</a>
                 </div>
               </div>
@@ -371,9 +385,16 @@
               <div class="products_new_item--content-container">
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
-                  <a href="#" class="btn btn--view-page add-to-cart">
+                  <button
+                    type="button"
+                    class="btn btn--shoppingcart add-to-cart"
+                    data-product-id="5"
+                    data-product-name="Best Product 1"
+                    data-product-price="50"
+                    data-product-img="https://placehold.co/600x400"
+                  >
                     <i class="fa-solid fa-cart-shopping"></i>
-                  </a>
+                  </button>
                   <a class="btn btn--view-page" href="#">View</a>
                 </div>
               </div>
@@ -397,9 +418,16 @@
               <div class="products_new_item--content-container">
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
-                  <a href="#" class="btn btn--view-page add-to-cart">
+                  <button
+                    type="button"
+                    class="btn btn--shoppingcart add-to-cart"
+                    data-product-id="5"
+                    data-product-name="Best Product 1"
+                    data-product-price="50"
+                    data-product-img="https://placehold.co/600x400"
+                  >
                     <i class="fa-solid fa-cart-shopping"></i>
-                  </a>
+                  </button>
                   <a class="btn btn--view-page" href="#">View</a>
                 </div>
               </div>
@@ -467,6 +495,58 @@
         </form>
       </section>
     </footer>
+
+    <div id="cart-modal" class="cart-modal hidden">
+      <div class="cart-modal-content">
+        <button id="close-cart-modal" class="cart-modal-close">&times;</button>
+        <div class="cart-modal-body">
+          <img id="modal-product-image" class="modal-product-image" />
+          <div class="modal-product-details">
+            <p class="modal-product-name" id="modal-product-name"></p>
+            <p class="modal-product-price" id="modal-product-price"></p>
+            <select id="modal-product-quantity">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+              <option value="9+">9+</option>
+            </select>
+            <div class="modal-product-options">
+              <div class="size-options">
+                <label>Size:</label>
+                <div class="modal-product-size" id="modal-product-size">
+                  <button>XS</button>
+                  <button>S</button>
+                  <button>M</button>
+                  <button>L</button>
+                  <button>XL</button>
+                </div>
+                <span class="error-message" id="error-message"></span>
+              </div>
+              <div class="color-options">
+                <label>Color:</label>
+                <div class="color-buttons">
+                  <button class="color-btn white selected" data-color="white">
+                    <div class="color-inner"></div>
+                  </button>
+                  <button class="color-btn black" data-color="black"></button>
+                </div>
+              </div>
+            </div>
+            <div class="modal-product-actions">
+              <button id="add-to-cart-modal" class="btn btn--add-to-cart">
+                <i id="shopping-cart-icon" class="fa-solid fa-cart-shopping"></i>Add to Cart
+              </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script type="module" src="./src/js/main.js"></script>
   </body>
 </html>
