Fix: modal cart fully functions, added: toast popup

--- a/index.html
+++ b/index.html
@@ -526,16 +526,15 @@
                   <button>L</button>
                   <button>XL</button>
                 </div>
-                <span class="error-message" id="error-message"></span>
+                <span class="error-message" id="error-message-size"></span>
               </div>
               <div class="color-options">
                 <label>Color:</label>
                 <div class="color-buttons">
-                  <button class="color-btn white selected" data-color="white">
-                    <div class="color-inner"></div>
-                  </button>
+                  <button class="color-btn white" data-color="white"></button>
                   <button class="color-btn black" data-color="black"></button>
                 </div>
+                <span class="error-message" id="error-message-color"></span>
               </div>
             </div>
             <div class="modal-product-actions">
