--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
     <link
       rel="icon"
       type="image/png"
-      href="/src/assets/images/favicon/favicon-96x96.png"
+      href="./src/assets/images/favicon/favicon-96x96.png"
       sizes="96x96"
     />
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/src/assets/images/favicon/favicon.svg"
+      href="./src/assets/images/favicon/favicon.svg"
     />
-    <link rel="shortcut icon" href="/src/assets/images/favicon/favicon.ico" />
+    <link rel="shortcut icon" href="./src/assets/images/favicon/favicon.ico" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/src/assets/images/favicon/apple-touch-icon.png"
+      href="./src/assets/images/favicon/apple-touch-icon.png"
     />
     <meta name="apple-mobile-web-app-title" content="XPLY" />
-    <link rel="manifest" href="/src/assets/images/favicon/site.webmanifest" />
+    <link rel="manifest" href="./src/assets/images/favicon/site.webmanifest" />
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/main.css" />
   </head>
