Added: media queries

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
           <h1 class="header__logo_text">XPLY</h1>
         </a>
       </section>
+
+      <button id="nav-toggle" class="header__toggle" aria-label="Open navigation">
+        <img id="hamburger-icon" class="hamburger-icon" src="./src/assets/images/head/hamburger.svg" alt="hamburger icon" aria-hidden="true" />
+      </button>
+
       <div class="header-group">
         <nav class="header__nav">
           <ul class="header__nav_list">
@@ -66,7 +71,7 @@
               </div>
             </li>
             <li class="header__nav_item has-megamenu">
-              <a href="#">men</a> <i class="fa-solid fa-chevron-down"></i>
+              <a href="#">men <i class="fa-solid fa-chevron-down"></i></a> 
               <div class="megamenu">
                 <ul class="megamenu__list">
                   <li><a href="#">T-Shirts</a></li>
@@ -78,7 +83,7 @@
               </div>
             </li>
             <li class="header__nav_item has-megamenu">
-              <a href="#">women</a> <i class="fa-solid fa-chevron-down"></i>
+              <a href="#">women <i class="fa-solid fa-chevron-down"></i></a>
               <div class="megamenu">
                 <ul class="megamenu__list">
                   <li><a href="#">T-Shirts</a></li>
