--- a/index.html
+++ b/index.html
@@ -170,7 +170,12 @@
         <h2 class="products__new_title">New Drops</h2>
         <div class="products__new_container">
           <div class="products__new_item">
-            <div class="products__new_item--img-wrapper">
+            <div class="products__new_item--img-wrapper add-to-cart"
+              data-product-id="1"
+              data-product-name="New Product 1"
+              data-product-price="50"
+              data-product-img="./src/assets/images/products/new/product1.jpg"
+            >
               <img
                 class="products__new_item--img main-img"
                 src="./src/assets/images/products/new/product1.jpg"
@@ -203,7 +208,12 @@
             </div>
           </div>
           <div class="products__new_item">
-            <div class="products__new_item--img-wrapper">
+              <div class="products__new_item--img-wrapper add-to-cart"
+                data-product-id="2"
+                data-product-name="New Product 2"
+                data-product-price="50"
+                data-product-img="https://placehold.co/600x400"
+              >
               <img
                 class="products__new_item--img main-img"
                 src="https://placehold.co/600x400"
@@ -236,7 +246,12 @@
             </div>
           </div>
           <div class="products__new_item">
-            <div class="products__new_item--img-wrapper">
+            <div class="products__new_item--img-wrapper add-to-cart"
+              data-product-id="3"
+              data-product-name="New Product 3"
+              data-product-price="50"
+              data-product-img="https://placehold.co/600x400"
+            >
               <img
                 class="products__new_item--img main-img"
                 src="https://placehold.co/600x400"
@@ -269,7 +284,12 @@
             </div>
           </div>
           <div class="products__new_item">
-            <div class="products__new_item--img-wrapper">
+            <div class="products__new_item--img-wrapper add-to-cart"
+              data-product-id="4"
+              data-product-name="New Product 4"
+              data-product-price="50"
+              data-product-img="https://placehold.co/600x400"
+            >
               <img
                 class="products__new_item--img main-img"
                 src="https://placehold.co/600x400"
@@ -307,7 +327,12 @@
         <h2 class="products__best-sellers_title">Best Sellers</h2>
         <div class="products__new_container">
           <div class="products__new_item">
-            <div class="products__new_item--img-wrapper">
+            <div class="products__new_item--img-wrapper add-to-cart"
+              data-product-id="5"
+              data-product-name="Best Product 1"
+              data-product-price="50"
+              data-product-img="https://placehold.co/600x400"
+            >
               <img
                 class="products__new_item--img main-img"
                 src="https://placehold.co/600x400"
@@ -320,7 +345,7 @@
               />
             </div>
             <div class="products_new_item--content">
-              <h3>New Product 1</h3>
+              <h3>Best Product 1</h3>
               <div class="products_new_item--content-container">
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
@@ -340,28 +365,33 @@
             </div>
           </div>
           <div class="products__new_item">
-            <div class="products__new_item--img-wrapper">
+            <div class="products__new_item--img-wrapper add-to-cart"
+              data-product-id="6"
+              data-product-name="Best Product 2"
+              data-product-price="50"
+              data-product-img="https://placehold.co/600x400"
+              >
               <img
                 class="products__new_item--img main-img"
                 src="https://placehold.co/600x400"
-                alt="New product 2"
+                alt="New product 6"
               />
               <img
                 class="products__new_item--img hover-img"
                 src="./src/assets/images/products/new/hover/producthover1.jpg"
-                alt="New product 2 alternate view"
+                alt="New product 6 alternate view"
               />
             </div>
             <div class="products_new_item--content">
-              <h3>New Product 2</h3>
+              <h3>Best Product 2</h3>
               <div class="products_new_item--content-container">
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
                   <button
                     type="button"
                     class="btn btn--shoppingcart add-to-cart"
-                    data-product-id="5"
-                    data-product-name="Best Product 1"
+                    data-product-id="6"
+                    data-product-name="Best Product 3"
                     data-product-price="50"
                     data-product-img="https://placehold.co/600x400"
                   >
@@ -373,11 +403,16 @@
             </div>
           </div>
           <div class="products__new_item">
-            <div class="products__new_item--img-wrapper">
+            <div class="products__new_item--img-wrapper add-to-cart"
+              data-product-id="7"
+              data-product-name="Best Product 3"
+              data-product-price="50"
+              data-product-img="https://placehold.co/600x400"
+            >              
               <img
                 class="products__new_item--img main-img"
                 src="https://placehold.co/600x400"
-                alt="New product 3"
+                alt="Best product 3"
               />
               <img
                 class="products__new_item--img hover-img"
@@ -386,15 +421,15 @@
               />
             </div>
             <div class="products_new_item--content">
-              <h3>New Product 3</h3>
+              <h3>Best Product 3</h3>
               <div class="products_new_item--content-container">
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
                   <button
                     type="button"
                     class="btn btn--shoppingcart add-to-cart"
-                    data-product-id="5"
-                    data-product-name="Best Product 1"
+                    data-product-id="7"
+                    data-product-name="Best Product 3"
                     data-product-price="50"
                     data-product-img="https://placehold.co/600x400"
                   >
@@ -406,7 +441,12 @@
             </div>
           </div>
           <div class="products__new_item">
-            <div class="products__new_item--img-wrapper">
+            <div class="products__new_item--img-wrapper add-to-cart"
+              data-product-id="8"
+              data-product-name="Best Product 4"
+              data-product-price="50"
+              data-product-img="https://placehold.co/600x400"
+              >
               <img
                 class="products__new_item--img main-img"
                 src="https://placehold.co/600x400"
@@ -419,15 +459,15 @@
               />
             </div>
             <div class="products_new_item--content">
-              <h3>New Product 4</h3>
+              <h3>Best Product 4</h3>
               <div class="products_new_item--content-container">
                 <span class="products_new_item--price">$50</span>
                 <div class="products_new_item_buttons">
                   <button
                     type="button"
                     class="btn btn--shoppingcart add-to-cart"
-                    data-product-id="5"
-                    data-product-name="Best Product 1"
+                    data-product-id="8"
+                    data-product-name="Best Product 4"
                     data-product-price="50"
                     data-product-img="https://placehold.co/600x400"
                   >
