added filters and landing page for products

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="header-group">
         <nav class="header__nav">
           <ul class="header__nav_list">
-            <li class="header__nav_item"><a href="#">new</a></li>
+            <li class="header__nav_item"><a href="./pages/new/">new</a></li>
             <li class="header__nav_item has-megamenu">
               <a href="#">all <i class="fa-solid fa-chevron-down"></i></a>
               <div class="megamenu">
@@ -187,7 +187,7 @@
       </section>
 
       <section class="products__new">
-        <h2 class="products__new_title">New Drops</h2>
+        <h2 class="products__sub_title">New Drops</h2>
         <div class="products__new_container">
           <div class="products__new_item">
             <div
@@ -348,7 +348,7 @@
         </div>
       </section>
       <section class="products__best-sellers">
-        <h2 class="products__best-sellers_title">Best Sellers</h2>
+        <h2 class="products__sub_title">Best Sellers</h2>
         <div class="products__new_container">
           <div class="products__new_item">
             <div
